app/stylesheets/theme/default/style.sass
/* ... */
              &.selected
                display: block
              &.combo
                +inline-block
                float: right
                line-height: 8px
                font-size: 5px
                padding-top: 2px
                padding-right: 4px
              a
                display: block
                color: #ddd
              .new-dashboard-input
                width: 192px
    #card-table
      +bg(transparent)
      #hand
        +bg(transparent)
        .card
          &.updates-available
            .card-box
              .card-header
                .toolbar
                  +linear-gradient(#a90, #960)
          .info
            z-index: 1
            margin-left: -225px
            &.open
              margin-left: 0px
              .drawer
                +box-shadow
                display: block
            .scroller
              +chiseled-text
              display: none
              position: absolute
              right: 1px
              top:        -15px
              height:      15px
              line-height: 15px
              font-size: 11px
              span
                color: #aaa
              a
                +inline-block
                width: 11px
                &.tabs-left
                  text-align: right
                  margin-left: 0px
                &.tabs-right
                  text-align: left
                text-decoration: none
            .tabs
              +non-list
              +rot90
              +transform-origin(0%, 0%)
              position: absolute
              z-index: 0
              width: 100%
              top: 0px
              left: 253px
              right: 0px
              bottom: 0px
              height: 29px
              overflow: hidden
              .section
                +inline-block
                margin-bottom: 5px
                border-bottom-color: #e3e7ea
                .label
                  +inline-block
                  +bg(#444,#eee)
                  +linear-gradient(#555,#333)
                  &:hover
                    +bg(#4a4a4a,#eee)
                    +linear-gradient(#5a5a5a,#3a3a3a)
                  &.selected
                    +bg(#E3E7EA, #444)
                    +linear-gradient(#E3E7EA,#E3E7EA)
                    +chiseled-text
                    border-color: #444
                  +rounded-top(4px)
                  +border-box
                  +chiseled-text-light
                  +box-shadow(2px, 0px)
                  border: 1px solid #444
                  border-bottom: none
                  margin: 0px 5px
                  padding: 0px 10px
                  font-size: 12px
                  text-transform: uppercase
                  height: 29px
                  line-height: 26px
                  letter-spacing: 1px
                  font-weight: 400
                .entries
                  display: none
            .drawer
              +non-list
              +bg(#e3e7ea)
              width: 223px
              height: 100%
              border: 1px solid #444
              display: none
              .section
                .label
                  display: none
                .entries
                  +non-list
                  display: none
                  &.selected
                    display: block
                  .entry
                    border-bottom: 1px solid #aaa
                    border-top: 1px solid #fff
                    line-height: 17px
                    font-size: 14px
                    padding: 18px 15px 18px 25px
                    a
                      display: block
                      text-decoration: none
                    .fluxx-card-content-metadata-section-title
                      font-size: 11pt
                    .fluxx-card-content-metadata-section-info
                      display: block
                      font-size: 10pt
          .card-box
            position: relative
            z-index: 2
            border: 1px solid #999
            background-color: #c4c4c4
            +box-shadow
            +rounded(6px)
            p
              margin: 0px
              font-size: 10pt
              line-height: 18px
            h1,h2,h3
              border-bottom: 1px solid #d6d6d6
              margin: 0px
              .actions
                +inline-block
                float: right
                font-weight: normal
                font-size: 80%
            h1
              font-size: 18pt
              line-height: 24px
              border-bottom: none
            h2
              font-size: 16px
              line-height: 24px
              margin-top: 24px
            h3
              font-size: 200px
            +pretty-forms
            .string,.select,.numeric,.datetime,.date,.autocomplete,.password,.time_zone
              +form-field-one-line
            .text,.multiple-select-transfer
              +form-field-two-line
            .datetime,.date
              input
                background: #{inline_image("/images/fluxx_engine/theme/default/icons/calendar.png")} 99% center no-repeat
                background-color: #fff
            .commit,.hidden
              display: none
            .required
              label
                font-weight: bold
                abbr
                  display: none
            .error
              label
                color: #a33
              input,textarea,select
                border-color: #a33
                margin-bottom: 2px
              input,textarea
                border-left-width: 4px
              select
              .inline-errors
                color: #a33
                font-size: 10px
                line-height: 14px
            textarea
              overflow: hidden
            .blank
              height: 24px
            .warning
              background: #{inline_image("/images/fluxx_engine/theme/default/icons/information.png")} no-repeat left center
/* ... */

